--- a/arch/arm/boot/dts/qcom/msm8956-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8956-pm.dtsi
@@ -291,7 +291,7 @@
 		    <0xb011008 0x4>;
 		reg-names = "vmpm", "ipc";
 		interrupts = <0 171 1>;
-		clocks = <&clock_gcc clk_xo_lpm_clk>;
+		clocks = <&clock_rpmcc CXO_LPM_CLK>;
 		clock-names = "xo";
 
 		qcom,ipc-bit-offset = <1>;
