--- a/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
@@ -406,50 +406,6 @@
 		pinctrl-3 = <>;
 	};
 
-	sound-9335 {
-		qcom,msm-mbhc-hphl-swh = <1>;
-		/delete-property/ qcom,hph-en1-gpio;
-		/delete-property/ qcom,hph-en0-gpio;
-		/delete-property/ qcom,us-euro-gpios;
-		qcom,ear-en-gpios = <&pm8994_gpios 13 0>;
-		qcom,audio-routing =
-			"AIF4 VI", "MCLK",
-			"RX_BIAS", "MCLK",
-			"MADINPUT", "MCLK",
-			"AMIC2", "MIC BIAS2",
-			"MIC BIAS2", "Headset Mic",
-			"MIC BIAS2", "ANCRight Headset Mic",
-			"AMIC3", "MIC BIAS3",
-			"MIC BIAS3", "ANCLeft Headset Mic",
-			"DMIC0", "MIC BIAS1",
-			"MIC BIAS1", "Digital Mic0",
-			"DMIC3", "MIC BIAS4",
-			"MIC BIAS4", "Digital Mic3",
-			"SpkrLeft IN", "SPK1 OUT",
-			"SpkrRight IN", "SPK2 OUT";
-		/delete-property/ qcom,hdmi-audio-rx;
-		asoc-codec = <&stub_codec>;
-		asoc-codec-names = "msm-stub-codec.1";
-	};
-
-	qcom,msm-dai-mi2s {
-		dai_mi2s: qcom,msm-dai-q6-mi2s-tert {
-			/delete-property/ pinctrl-names;
-			/delete-property/ pinctrl-0;
-			/delete-property/ pinctrl-1;
-			};
-	};
-
-	slim_msm: slim@91c0000 {
-		tasha_codec {
-			qcom,cdc-micbias1-mv = <1800>;
-			qcom,cdc-micbias2-mv = <1800>;
-			qcom,cdc-micbias3-mv = <1800>;
-			qcom,cdc-micbias4-mv = <1800>;
-			qcom,cdc-dmic-sample-rate = <2400000>;
-		};
-	};
-
 	qcom,wdt@9830000 {
 		qcom,bark-time = <12000>;
 	};
@@ -677,6 +633,48 @@
 		interrupts = <79 8>; /* WL_HOST_WAKE */
 		interrupt-names = "oob-irq";
 	};
+};
+
+&snd_card_9335 {
+	qcom,msm-mbhc-hphl-swh = <1>;
+	/delete-property/ qcom,hph-en1-gpio;
+	/delete-property/ qcom,hph-en0-gpio;
+	/delete-property/ qcom,us-euro-gpios;
+	qcom,ear-en-gpios = <&pm8994_gpios 13 0>;
+	qcom,audio-routing =
+		"AIF4 VI", "MCLK",
+		"RX_BIAS", "MCLK",
+		"MADINPUT", "MCLK",
+		"AMIC2", "MIC BIAS2",
+		"MIC BIAS2", "Headset Mic",
+		"MIC BIAS2", "ANCRight Headset Mic",
+		"AMIC3", "MIC BIAS3",
+		"MIC BIAS3", "ANCLeft Headset Mic",
+		"DMIC0", "MIC BIAS1",
+		"MIC BIAS1", "Digital Mic0",
+		"DMIC3", "MIC BIAS4",
+		"MIC BIAS4", "Digital Mic3",
+		"SpkrLeft IN", "SPK1 OUT",
+		"SpkrRight IN", "SPK2 OUT";
+	/delete-property/ qcom,hdmi-audio-rx;
+	asoc-codec = <&stub_codec>;
+	asoc-codec-names = "msm-stub-codec.1";
+};
+
+&slim_msm {
+	tasha_codec {
+		qcom,cdc-micbias1-mv = <1800>;
+		qcom,cdc-micbias2-mv = <1800>;
+		qcom,cdc-micbias3-mv = <1800>;
+		qcom,cdc-micbias4-mv = <1800>;
+		qcom,cdc-dmic-sample-rate = <2400000>;
+	};
+};
+
+&dai_mi2s {
+	/delete-property/ pinctrl-names;
+	/delete-property/ pinctrl-0;
+	/delete-property/ pinctrl-1;
 };
 
 /* GPIO_1: NC(P_SENSE_CNTL) */
