--- a/arch/arm64/boot/dts/qcom/sdm630-nile-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm630-nile-common.dtsi
@@ -609,6 +609,18 @@
 };
 
 &pm660_gpios {
+	/* GPIO 3 (AUDIO_REF_CLK) */
+	aud_ref_clk {
+		aud_ref_clk_default: aud_ref_clk_default {
+			pins = "gpio3";
+			function = "func1";
+			qcom,drive-strength = <2>;
+			power-source = <0>;
+			bias-pull-down;
+			output-high;
+		};
+	};
+
 	/* GPIO 4 (NFC_CLK_REQ) */
 	nfc_clk {
 		nfc_clk_default: nfc_clk_default {
