--- a/arch/arm64/boot/dts/qcom/waipio-nagara-pdx224_generic-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/waipio-nagara-pdx224_generic-overlay.dts
@@ -5,6 +5,10 @@
 #include "waipio-pm8010-spmi.dtsi"
 #include "waipio-nagara-pdx224_generic.dtsi"
 
+#include "somc-nagara-audio-pdx224.dts"
+#include "waipio-camera-sensor-nagara-pdx224.dts"
+#include "waipio-sde-display-pdx224-overlay.dts"
+
 / {
 	model = "Sony Corporation. PDX-224(WAIPIO QRD with PM8010)";
 	compatible = "somc,pdx224-generic", "qcom,waipio", "qcom,qrd";
