--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -2,8 +2,8 @@ ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 
 dtbo-$(CONFIG_ARCH_SONY_SAGAMI) += lahaina-sagami-pdx214_generic-overlay.dtbo
 dtbo-$(CONFIG_ARCH_SONY_SAGAMI) += lahaina-sagami-pdx215_generic-overlay.dtbo
-dtbo-$(CONFIG_ARCH_SONY_NAGARA) += waipio-nagara-pdx223_generic-overlay.dtbo
-dtbo-$(CONFIG_ARCH_SONY_NAGARA) += waipio-nagara-pdx224_generic-overlay.dtbo
+dtbo-$(CONFIG_MACH_SONY_PDX223) += waipio-nagara-pdx223_generic-overlay.dtbo
+dtbo-$(CONFIG_MACH_SONY_PDX224) += waipio-nagara-pdx224_generic-overlay.dtbo
 
 lahaina-sagami-pdx214_generic-overlay.dtbo-base	:= lahaina.dtb lahaina-v2.dtb lahaina-v2.1.dtb
 lahaina-sagami-pdx215_generic-overlay.dtbo-base	:= lahaina.dtb lahaina-v2.dtb lahaina-v2.1.dtb
