--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -1,7 +1,7 @@
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
 
-dtbo-$(CONFIG_ARCH_SONY_SAGAMI) += lahaina-sagami-pdx214_generic-overlay.dtbo
-dtbo-$(CONFIG_ARCH_SONY_SAGAMI) += lahaina-sagami-pdx215_generic-overlay.dtbo
+dtbo-$(CONFIG_MACH_SONY_PDX214) += lahaina-sagami-pdx214_generic-overlay.dtbo
+dtbo-$(CONFIG_MACH_SONY_PDX215) += lahaina-sagami-pdx215_generic-overlay.dtbo
 dtbo-$(CONFIG_MACH_SONY_PDX223) += waipio-nagara-pdx223_generic-overlay.dtbo
 dtbo-$(CONFIG_MACH_SONY_PDX224) += waipio-nagara-pdx224_generic-overlay.dtbo
 
